--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,17 +1,17 @@
 ---
 import { Icon } from "astro-icon";
-import HeroImage from "~/components/hero-image.astro";
+import FooterBGImage from "~/components/footer-image.astro";
 import type { FooterLink } from "~/types";
 
 const links: Array<FooterLink> = [
   {
-    url: "https://astro.build/",
+    url: "/",
     description: "Astro's official website",
     icon: "mdi:home",
   },
   {
-    url: "https://github.com/mhyfritz/astro-landing-page",
-    description: "View source on GitHub",
+    url: "https://github.com/conciseusa/jupyter/blob/main/NanoUPS.ipynb",
+    description: "View test data on GitHub",
     icon: "fa-brands:github-alt",
   },
   {
@@ -29,7 +29,7 @@ const links: Array<FooterLink> = [
 
 <footer class="relative flex h-64 items-center justify-center">
   <div class="absolute inset-0 overflow-hidden opacity-40">
-    <HeroImage />
+    <FooterBGImage />
   </div>
   <ul class="relative grid grid-cols-2 gap-4 sm:grid-cols-4">
     {
