--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,10 +4,11 @@ import ThemeSwitcher from "~/components/theme-switcher.astro";
 import type { NavItem } from "~/types";
 
 const navItems: Array<NavItem> = [
+  { title: "Info", url: "#intro" },
   { title: "Features", url: "#features" },
-  { title: "Compatibility", url: "#compatibility" },
-  { title: "Showcase", url: "#showcase" },
 ];
+  {/* title: "Compatibility", url: "#compatibility" */}
+  {/* title: "Showcase", url: "#showcase" add comma */}
 ---
 
 <header
