--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -2,6 +2,7 @@
 import { Picture } from "@astrojs/image/components";
 import { Icon } from "astro-icon";
 import astronautImage from "~/assets/astronaut.png";
+import batteryImage from "~/assets/12V-5Ah-battery.jpg";
 import HeroImage from "~/components/hero-image.astro";
 import Starfield from "~/components/starfield.astro";
 import GitHubCorner from "./github-corner.astro";
@@ -24,22 +25,22 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
       <div
         class="gradient-text text-center font-extrabold tracking-tighter text-8xl"
       >
-        Build fast
-        <br /> websites,
-        <br /> faster.
+        Out of this
+        <br /> world battery
+        <br /> run time.
       </div>
     </h2>
     <div
-      id="astronaut"
+      id="floatingImg"
       class="w-2/3 max-w-3xl self-start sm:w-10/12 sm:self-auto sm:justify-self-start"
     >
       <Picture
         class="h-full w-full object-cover"
-        src={astronautImage}
+        src={batteryImage}
         widths={widths}
         sizes={sizes}
         loading="eager"
-        alt="A floating astronaut in a space suit"
+        alt="A floating battey in space"
       />
     </div>
   </div>
@@ -64,12 +65,12 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
     }
   }
 
-  #astronaut {
+  #floatingImg {
     animation: float linear 2.5s infinite alternate;
   }
 
   @media (prefers-reduced-motion: reduce) {
-    #astronaut {
+    #floatingImg {
       @apply animate-none;
     }
 
