--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const description =
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <meta name="generator" content={generator} />
 
-    <title>Astro Landing Page</title>
+    <title>NanoUPS — Compact DC Uninterruptible Power Supply</title>
     <meta name="description" content={description} />
 
     <!-- social media -->
@@ -61,13 +61,14 @@ const description =
   <body
     class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white"
   >
-    <Header />
+    <Header /> <!-- Shows at bottom of Splash at load -->
+    <!-- <Splash /> -->
     <Splash />
     <div class="space-y-24 px-8 py-32">
       <Intro />
       <Features />
-      <Compatibility />
-      <Showcase />
+      {/* <Compatibility />  */}
+      {/* <Showcase />  */}
     </div>
     <Footer />
   </body>
