Lots of progress checkin

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -15,13 +15,13 @@ const links: Array<FooterLink> = [
     icon: "fa-brands:github-alt",
   },
   {
-    url: "https://astro.build/chat",
-    description: "Astro on Discord",
+    url: "https://discord.com/channels/423308368556589077/1186816536799871116",
+    description: "Discord",
     icon: "fa-brands:discord",
   },
   {
-    url: "https://twitter.com/astrodotbuild",
-    description: "Astro on Twitter",
+    url: "https://twitter.com/conciseusa",
+    description: "Twitter",
     icon: "fa-brands:twitter",
   },
 ];
