--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -14,9 +14,9 @@ const orderedSites = featuredSites.sort(
 
 <ContentSection title="Showcase" id="showcase">
   <Fragment slot="lead">
-    Astro is <span class="text-primary">versatile</span>.{" "}
-    <span class="text-primary">Explore</span> what's possible and get{" "}
-    <span class="text-primary">inspired</span>.
+    NanoUPS attaches to a <span class="text-primary">DIN</span> clip.{" "}
+    Making it easy to mount next to a DIN <span class="text-primary">power</span> supply{" "}
+    in a <span class="text-primary">NEMA</span> enclosure.
   </Fragment>
   <div class="max-w-6xl space-y-2">
     <div class="grid grid-cols-1 gap-4 md:grid-cols-1 lg:grid-cols-2">
