--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -52,6 +52,7 @@ const features: Array<FeatureItem> = [
     NanoUPS fits in the slot of space between a small DIN rail power supply and a 5Ah battery 
     in a <span class="text-primary">NEMA</span> enclosure.
   </Fragment>
+
   <ul class="grid max-w-6xl grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
     {
       features.map(({ title, description, icon }) => (
@@ -65,11 +66,14 @@ const features: Array<FeatureItem> = [
       ))
     }
   </ul>
-  
+
+  <p>Checkout the <span class="text-primary">NanoUPS</span> schematic, drawdown and recharge test data and plugin examples below.</p>
+
+  <!-- https://github.com/natemoo-re/astro-icon to see icons, not clear which icons can be used. -->
   <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
     <a
       aria-label="NanoUPS schematic"
-      href="/public/BattBackBasicSchV2.pdf"
+      href="/BattBackBasicSchV2.pdf"
       class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4"
       target="_blank"
     >
@@ -84,6 +88,36 @@ const features: Array<FeatureItem> = [
     >
       <Icon pack="carbon" name="logo-jupyter" class="h-8" />
       <span>View test data on GitHub</span>
+    </a>
+  </div>
+
+  <div class="grid grid-cols-1 gap-2 sm:grid-cols-3">
+    <a
+      aria-label="LM317-P783 schematic"
+      href="/LM317-P783-sch.png"
+      class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4"
+      target="_blank"
+    >
+      <Icon pack="carbon" name="schematics" class="h-8" />
+      <span>LM317-P783 Schematic</span>
+    </a>
+    <a
+      aria-label="LM2596-P783 schematic"
+      href="/LM2596-P783-sch.pdf"
+      class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4"
+      target="_blank"
+    >
+      <Icon pack="carbon" name="schematics" class="h-8" />
+      <span>LM2596-P783 Schematic</span>
+    </a>
+    <a
+      aria-label="P783F-S Series"
+      href="https://www.cui.com/product/dc-dc-converters/non-isolated/p783f-s-series"
+      class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4"
+      target="_blank"
+    >
+      <Icon pack="ph" name="plug" class="h-8" />
+      <span>P783F-S Series Module</span>
     </a>
   </div>
   </ContentSection>
