--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -6,6 +6,9 @@ import type { NavItem } from "~/types";
 const navItems: Array<NavItem> = [
   { title: "Info", url: "#intro" },
   { title: "Features", url: "#features" },
+  { title: "Showcase", url: "#showcase" },
+  { title: "Showdown", url: "#showdown" },
+  { title: "Lowdown", url: "#lowdown" },
 ];
   {/* title: "Compatibility", url: "#compatibility" */}
   {/* title: "Showcase", url: "#showcase" add comma */}
@@ -15,11 +18,6 @@ const navItems: Array<NavItem> = [
   id="page-header"
   class="absolute bottom-0 z-20 flex w-full items-center justify-between border-b border-transparent px-8 py-4 text-white"
 >
-  <a class="flex items-center gap-3 hover:!text-default" href="#">
-    <h1 class="sr-only">Astro</h1>
-    <Icon name="logomark" class="h-10" />
-    <Icon name="wordmark" class="hidden h-4 sm:block" />
-  </a>
   <div>
     <div class="flex items-center gap-6">
       <nav class="hidden sm:block">
@@ -78,6 +76,12 @@ const navItems: Array<NavItem> = [
       </div>
     </div>
   </div>
+  <a class="flex items-center gap-3 hover:!text-default" target="_blank" href="https://astro.build/">
+    <h1 class="sr-only">Website built with Astro</h1>
+    Site built with 
+    <Icon name="logomark" class="h-10" />
+    <Icon name="wordmark" class="hidden h-4 sm:block" />
+  </a>
 </header>
 
 <script>
