--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -4,27 +4,11 @@ import ContentSection from "~/components/content-section.astro";
 ---
 
 <ContentSection title="Power the load, not the inverter" id="intro">
-  <Icon slot="eyebrow" name="logomark" class="h-32" />
+  <Icon slot="eyebrow" name="NanoLogo" class="h-32" />
   <Fragment slot="lead">
     NanoUPS is a compact DC Uninterruptible Power Supply compatible with
     <span class="text-primary">LiFePO4</span> and
     <span class="text-primary">Lead Acid</span>
     batteries.
   </Fragment>
-  <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
-    <a
-      href="https://docs.astro.build/"
-      class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4"
-    >
-      <Icon pack="mdi" name="telescope" class="h-8" />
-      <span>Read the docs intro comp</span>
-    </a>
-    <a
-      href="https://astro.new/"
-      class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4"
-    >
-      <Icon pack="mdi" name="rocket" class="h-8" />
-      <span>Try it out intro comp</span>
-    </a>
-  </div>
 </ContentSection>
