--- a/src/components/showcase-card.astro
+++ b/src/components/showcase-card.astro
@@ -12,14 +12,14 @@ const widths = [450, 800];
 const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
 ---
 
-<a class="group aspect-[4/3] hover:!text-default" href={site.data.url}>
+<a class="group aspect-[4/3] hover:!text-default" href={site.data.url} target="_blank">
   <figure class="relative h-full w-full overflow-hidden">
     <Image
       class="h-full w-full bg-cover object-cover transition-all duration-300 group-hover:scale-110 group-hover:opacity-20 group-focus:scale-110 group-focus:opacity-20"
       src={site.data.image}
       widths={widths}
       sizes={sizes}
-      alt={`A screenshot of ${site.data.url}`}
+      alt={`${site.data.title}`}
     />
     <figcaption class="absolute inset-0">
       <div
