--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import "@fontsource-variable/inter";
-import Compatibility from "~/components/compatibility.astro";
-import Features from "~/components/features.astro";
+{/* import Compatibility from "~/components/compatibility.astro"; */}
 import Footer from "~/components/footer.astro";
 import Header from "~/components/header.astro";
 import Intro from "~/components/intro.astro";
+import Features from "~/components/features.astro";
 import Showcase from "~/components/showcase.astro";
+import Showdown from "~/components/showdown.astro";
+import Lowdown from "~/components/lowdown.astro";
 import Splash from "~/components/splash.astro";
 import "~/styles/index.css";
 
@@ -68,8 +70,8 @@ const description =
       <Intro />
       <Features />
       <Showcase />
-      {/* <Compatibility />  */}
-      {/* <Showcase />  */}
+      <Showdown />
+      <Lowdown />
     </div>
     <Footer />
   </body>
