--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon";
 import ContentSection from "~/components/content-section.astro";
 ---
 
-<ContentSection title="Power the load, not the inverter" id="intro">
+<ContentSection title="NanoUPS power the load, not the inverter" id="intro">
   <Icon slot="eyebrow" name="NanoLogo" class="h-32" />
   <Fragment slot="lead">
     NanoUPS is a compact DC Uninterruptible Power Supply compatible with
