--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import { Icon } from "astro-icon";
-import astronautImage from "~/assets/astronaut.png";
+// import astronautImage from "~/assets/astronaut.png";
 import batteryImage from "~/assets/12V-5Ah-battery-536.png";
 import HeroImage from "~/components/hero-image.astro";
 import Starfield from "~/components/starfield.astro";
