Fix splash logo

--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -20,7 +20,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
     <h2
       class="flex flex-col items-center gap-2 self-end sm:gap-4 sm:self-auto sm:justify-self-end"
     >
-      <Icon name="logomark" class="size-20 text-white md:size-32" />
+      <Icon name="NanoLogo" class="h-24 text-white md:h-32 w-full" />
       <div
         class="gradient-text text-center font-extrabold tracking-tighter text-6xl md:text-8xl"
       >
